[tool.poetry]
name = "chatgptdb"
version = "0.1.0"
description = "Use ChatGPT as a database, wait what??"
authors = ["Piotr Styczyński"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
playwright = "^1.28.0"
colorama = "^0.4.6"
requests = "^2.28.1"
pydantic = "^1.10.2"
aiohttp = "^3.8.3"
loguru = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
